add line to about page

--- a/viewsPath/views/about.hbs
+++ b/viewsPath/views/about.hbs
@@ -13,6 +13,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <P>This site was created by Ben Kao 歡迎您!</P>
         <img class="portrait" src="./img/Ben 2012-04-23.jpg">
     </div>
     {{>footer}}
